--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.11.0
 bcrypt==5.0.0
+blinker==1.9.0
 certifi==2025.10.5
 click==8.3.0
 dnspython==2.8.0
@@ -8,6 +9,8 @@ email-validator==2.3.0
 fastapi==0.118.0
 fastapi-cli==0.0.13
 fastapi-cloud-cli==0.3.0
+graphql-core==3.2.7
+greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
@@ -15,17 +18,20 @@ httpx==0.28.1
 idna==3.10
 imutils==0.5.4
 Jinja2==3.1.6
+lia-web==0.2.3
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
 mongoengine==0.29.1
 numpy==2.2.6
 opencv-python==4.12.0.88
+packaging==25.0
 passlib==1.7.4
 pydantic==2.12.0
 pydantic_core==2.41.1
 Pygments==2.19.2
 pymongo==4.15.3
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
 PyYAML==6.0.3
@@ -34,8 +40,12 @@ rich-toolkit==0.15.1
 rignore==0.7.0
 sentry-sdk==2.40.0
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
+SQLAlchemy==2.0.44
+sqlmodel==0.0.27
 starlette==0.48.0
+strawberry-graphql==0.284.1
 typer==0.19.2
 typing-inspection==0.4.2
 typing_extensions==4.15.0
